--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.15",
+        "phpstan/phpstan": "^0.11.12",
+        "sensiolabs/security-checker": "^6.0",
         "symfony/maker-bundle": "^1.12"
     },
     "config": {
@@ -43,7 +46,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
