--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -9,6 +9,20 @@ return PhpCsFixer\Config::create()
     ->setRules([
         '@Symfony' => true,
         'array_syntax' => ['syntax' => 'short'],
+        'ordered_imports' => true,
+        'phpdoc_order' => true,
+        'phpdoc_align' => ['align' => 'left'],
+        'psr4' => true,
+        'strict_comparison' => true,
+        'strict_param' => true,
+        'concat_space' => ['spacing' => 'one'],
+        'single_line_comment_style' => false,
+        'yoda_style' => false,
+        'native_function_invocation' => [
+            'include' => ['@internal'],
+        ],
+        'no_useless_else' => true,
+        'no_useless_return' => true,
     ])
     ->setFinder($finder)
 ;
