--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 ###< friendsofphp/php-cs-fixer ###
 
 .idea/
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
