--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpstan/phpstan": "^0.11.12",
         "sensiolabs/security-checker": "^6.0",
-        "symfony/maker-bundle": "^1.12"
+        "symfony/maker-bundle": "^1.12",
+        "symfony/phpunit-bridge": "^4.3"
     },
     "config": {
         "preferred-install": {
