Reorganised Cloudflare Api Service

--- a/.env
+++ b/.env
@@ -29,4 +29,5 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 
 ###> CloudFlare ###
 CLOUDFLARE_API_KEY=to-be-filled-in
+CLOUDFLARE_USERNAME=to-be-filled-in
 ###< CloudFlare ###
