--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    cloudflare_apikey: '%env(CLOUDFLARE_API_KEY)%'
+    cloudflare_api_key: '%env(CLOUDFLARE_API_KEY)%'
+    cloudflare_username: '%env(CLOUDFLARE_USERNAME)%'
 
 services:
     # default configuration for services in *this* file
@@ -27,6 +28,7 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Command\Cloudflare\UpdateIpAddressCommand:
+    App\Service\CloudflareApiService:
         arguments:
-            $cloudflareApiKey: '%cloudflare_apikey%'
+            $cloudflareApiKey: '%cloudflare_api_key%'
+            $cloudflareUsername: '%cloudflare_username%'
