--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "cloudflare/sdk": "^1.1",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
