--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=fcfc2072437d632f89923c9ce28edcea
+APP_EMAIL=to-be-filled-in
+APP_DOMAIN_NAME=to-be-filled-in
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
@@ -23,3 +25,10 @@ APP_SECRET=fcfc2072437d632f89923c9ce28edcea
 CLOUDFLARE_API_KEY=to-be-filled-in
 CLOUDFLARE_USERNAME=to-be-filled-in
 ###< CloudFlare ###
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+POSTMARK_SERVER_TOKEN=to-be-filled-in
