--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/yaml": "4.3.*",
+        "wildbit/swiftmailer-postmark": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
