--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app_email: '%env(APP_EMAIL)%'
     cloudflare_api_key: '%env(CLOUDFLARE_API_KEY)%'
     cloudflare_username: '%env(CLOUDFLARE_USERNAME)%'
 
@@ -32,3 +33,8 @@ services:
         arguments:
             $cloudflareApiKey: '%cloudflare_api_key%'
             $cloudflareUsername: '%cloudflare_username%'
+
+    swiftmailer.mailer.transport.postmark:
+        class: Postmark\Transport
+        arguments:
+            - '%env(POSTMARK_SERVER_TOKEN)%'
