--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -19,6 +19,7 @@ monolog:
         #    level: info
         console:
             type: console
+            handler: grouped
             process_psr_3_messages: false
             channels: ["!event", "!doctrine", "!console"]
 
