Disable mailer_url

--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ CLOUDFLARE_USERNAME=to-be-filled-in
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+#MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 POSTMARK_SERVER_TOKEN=to-be-filled-in
