--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,14 +1,10 @@
 monolog:
     handlers:
-
         main:
-            type: fingers_crossed
-            action_level: error
-            handler: grouped
-            excluded_404s:
-                # regex: exclude all 404 errors from the logs
-                - ^/
-
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
+            channels: ["!event"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
@@ -19,28 +15,5 @@ monolog:
         #    level: info
         console:
             type: console
-            handler: grouped
             process_psr_3_messages: false
             channels: ["!event", "!doctrine", "!console"]
-
-        grouped:
-            type: group
-            members: [file_handler, deduplicated_email_handler]
-
-        file_handler:
-            type: rotating_file
-            level: debug
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
-
-        deduplicated_email_handler:
-            type: deduplication
-            handler: email_handler
-
-        email_handler:
-            type: swift_mailer
-            subject: 'Error on %env(APP_DOMAIN_NAME)%'
-            from_email: '%app_email%'
-            to_email: '%app_email%'
-            level: error
-            formatter: monolog.formatter.html
-            content_type: text/html
