--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -3,67 +3,21 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: grouped
-            excluded_404s:
-                # regex: exclude all 404 errors from the logs
-                - ^/
-
-        # uncomment to get logging in your browser
-        # you may have to allow bigger header sizes in your Web server configuration
-        #firephp:
-        #    type: firephp
-        #    level: info
-        #chromephp:
-        #    type: chromephp
-        #    level: info
+            handler: nested
+            excluded_http_codes: [404, 405]
+        nested:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
         console:
             type: console
-            handler: grouped
             process_psr_3_messages: false
-            channels: ["!event", "!doctrine", "!console"]
-
-        grouped:
-            type: group
-            members: [file_handler, deduplicated_email_handler]
-
-        file_handler:
-            type: rotating_file
-            level: debug
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
-
-        deduplicated_email_handler:
-            type: deduplication
-            handler: email_handler
-
-        email_handler:
-            type: swift_mailer
-            subject: 'Error on %env(APP_DOMAIN_NAME)%'
-            from_email: '%app_email%'
-            to_email: '%app_email%'
-            level: error
-            formatter: monolog.formatter.html
-            content_type: text/html
-
-#monolog:
-#    handlers:
-#        main:
-#            type: fingers_crossed
-#            action_level: error
-#            handler: nested
-#            excluded_http_codes: [404, 405]
-#        nested:
-#            type: stream
-#            path: "%kernel.logs_dir%/%kernel.environment%.log"
-#            level: debug
-#        console:
-#            type: console
-#            process_psr_3_messages: false
-#            channels: ["!event", "!doctrine"]
-#        deprecation:
-#            type: stream
-#            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
-#        deprecation_filter:
-#            type: filter
-#            handler: deprecation
-#            max_level: info
-#            channels: ["php"]
+            channels: ["!event", "!doctrine"]
+        deprecation:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
+        deprecation_filter:
+            type: filter
+            handler: deprecation
+            max_level: info
+            channels: ["php"]
