--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/yaml": "4.3.*",
-        "wildbit/swiftmailer-postmark": "^3.0"
+        "symfony/yaml": "4.3.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
