--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "phpstan/phpstan": "^0.11.12",
         "sensiolabs/security-checker": "^6.0",
         "symfony/maker-bundle": "^1.12",
-        "symfony/phpunit-bridge": "^4.3"
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/validator": "4.3.*"
     },
     "config": {
         "preferred-install": {
