--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/monolog-bundle": "^3.4",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
@@ -19,8 +20,7 @@
         "phpstan/phpstan": "^0.11.12",
         "sensiolabs/security-checker": "^6.0",
         "symfony/maker-bundle": "^1.12",
-        "symfony/phpunit-bridge": "^4.3",
-        "symfony/validator": "4.3.*"
+        "symfony/phpunit-bridge": "^4.3"
     },
     "config": {
         "preferred-install": {
