--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: php
 php:
     - "7.3"
+
+cache: composer
+
 script:
     - echo 'Build starts'
     - echo 'Installing dependencies...'
@@ -10,3 +13,9 @@ script:
     - vendor/bin/phpstan analyse --level 7 --memory-limit=512M --no-progress
     - vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation --allow-risky yes --using-cache=no
     - bin/phpunit --coverage-text
+
+install
+    - composer install --no-ansi --no-progress --quiet
+
+after_success:
+    - ssh "$DEPLOY_SERVER"
