--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: php
 php:
     - "7.3"
 
-addons:
-    ssh_known_hosts: "$DEPLOY_SERVER_ADDRESS:$DEPLOY_SERVER_PORT"
-
 jobs:
     include:
         - stage: test
@@ -20,6 +17,7 @@ jobs:
 
         - stage: deploy
           script:
+              - echo "$DEPLOY_SERVER_PUBLIC_KEY" >> $HOME/.ssh/known_hosts
               - ssh -p "$DEPLOY_SERVER_PORT" "$DEPLOY_SERVER_USER@$DEPLOY_SERVER_ADDRESS"
 
 stages:
