Improvement private key

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
 
         - stage: deploy
           script:
-              - echo "$PRIVATE_KEY" > $HOME/.ssh/id_rsa && chmod 0600 $HOME/.ssh/id_rsa
+              - echo "$SSH_PRIVATE_KEY" > $HOME/.ssh/id_rsa && chmod 0600 $HOME/.ssh/id_rsa
               - echo "$DEPLOY_SERVER_KNOWN_HOSTS" >> $HOME/.ssh/known_hosts
               - ssh -p "$DEPLOY_SERVER_PORT" "$DEPLOY_SERVER_USER@$DEPLOY_SERVER_ADDRESS" 'ls -al && exit'
 
